# pyflightdata

./: .gitignore  README.md  pyproject.toml
pyarinc/: __init__.py
pyarinc/arinc717/: aligned.py  bitstream.py  config.py  decoder.py  frame.py
pyarinc/arinc767/: config.py  decoder.py  frame.py
pyarinc/config/: prm_parser.py  vec_parser.py
pyarinc/io/: ags.py  csv_export.py  datafile.py  parquet_export.py
pyarinc/models/: frame.py  metadata.py  parameter.py
pyarinc/utils/: bitops.py  logging.py  timecode.py
tests/: test_717.py  test_767.py  test_ags_integration_arinc717.py  test_all_vec_prm_767.py  test_arinc717_bitstream.py  test_arinc717_decoder.py  test_arinc717_parameter.py  test_arinc717_scheduling.py  test_arinc767_decoder.py  test_arinc767_frame.py  test_arinc767_parameter.py  test_arinc767_partial_frame.py  test_arinc767_timestamp.py  test_bitops.py  test_fixtures_arinc717.py  test_fixtures_arinc767.py  test_parameter.py  test_prm_vec_parsers.py  test_vec_parser_767_tokens.py
tests/fixtures/: README.md
