[project]
name = "pyarinc"
version = "0.1.0"
description = "ARINC 717 / 767 decoding library"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Giorgio" }
]

dependencies = [
    "numpy",
    "pandas",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyarinc*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
